syntax = "proto3";

option java_package = "com.proto.saludo";

message SaludoRequest {
    string nombre = 1;
}

message SaludoResponse {
    string resultado = 1;
}

message OperacionRequest {
    int32 entrada1 = 1;
    int32 entrada2 = 2;
}

message OperacionResponse {
    float resultado = 1;
}

service saludoService {
    rpc saludo(SaludoRequest) returns (SaludoResponse);
    rpc suma(OperacionRequest) returns (OperacionResponse);
    rpc resta(OperacionRequest) returns (OperacionResponse);
    rpc mult(OperacionRequest) returns (OperacionResponse);
    rpc div(OperacionRequest) returns (OperacionResponse);
}